--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .infoText {
+    @apply p-4 bg-gray-700/70 rounded-lg max-w-[300px]
+  }
+}
